# musescore-part-formatter

./: .gitignore  MANIFEST.in  README.md  new_part_formatter.py  new_prog_part_formatter.py  out.mscx  out_invalid.xml  part_formatter.py  prog_part_formatter.py  prompts.py  pyproject.toml  temp_xml.xml  test_main_fns.py
.github/workflows/: release.yml
MusescorePartFormatter/: __main__.py  utils.py
Tests/: test_main.py  test_main_fns.py
_styles/: Jazz_part.mss
part_formatter/: __init__.py  part_formatter.py  test_main_fns.py  utils.py
part_formatter/resources/: broadway_score.mss  jazz_score.mss
src/musescore_part_formatter/: __init__.py  estimating_formatting_params.py  file_inspect.py  file_processing.py  formatting.py  main.py  utils.py
src/musescore_part_formatter.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
src/part_formatter/: formatting.py  main.py  part_formatter.py  utils.py
temp/: New-Test-Score.mscx  Test-Score.mscx  score_style.mss
test-data/: New-Test-Score.mscz  New-Test-Score_processed.mscz  Test-Score.mscz  Test-Score_processed.mscz
test-data-copy/Test-Score/: Test-Score.mscx  audiosettings.json
test-data-copy/another-day-of-sun/: audiosettings.json
test-data/.mscbackup/: .New-Test-Score.mscz~
test-data/Test-Score/: Test-Score.mscx  audiosettings.json
test-data/another-day-of-sun/: score_style.mss
tests/: README.md  conftest.py  test_estmating_formatting_params.py  test_file_inspecting.py  test_main_fns.py  test_utils.py
tests/test-data/: New-Test-Score-broadway-processed.mscz  (+7 more)
tests/test-data-copy/: Test-Score.mscz
(+76 files in other folders)
